<resources>
    <string name="app_name">Practica11_Asensio_Sanchez_Alex</string>

    <string name="aniadir">Añadir</string>
    <string name="ordenar">Ordenar</string>
    <string name="acercaDe">Acerca de</string>

    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>

    <string name="navInicio">Inicio</string>
    <string name="navLista">Lista completa</string>
    <string name="navFavoritos">Favoritos</string>
    <string name="navAjustes">Ajustes</string>
    <string name="navAbout">Acerca de la app</string>

    <string name="aceptarEditar">Aceptar</string>
    <string name="cancelarEditar">Cancelar</string>

    <string name="nombreAlbum">Album: </string>
    <string name="nombreBanda">Banda: </string>
    <string name="nombreDiscografica">Discogrçafica: </string>
    <string name="copiasVendidas">Copias vendidas: </string>
    <string name="fechaLanzamiento">Fecha de lanzamiento: </string>
</resources>