<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/navInicio"
            android:icon="@android:drawable/ic_menu_view" />
        <item
            android:id="@+id/lista_completa"
            android:title="@string/navLista"
            android:icon="@android:drawable/ic_menu_info_details" />
        <item
            android:id="@+id/nav_favoritos"
            android:title="@string/navFavoritos"
            android:icon="@android:drawable/ic_menu_myplaces" />
        <item
            android:id="@+id/nav_ajustes"
            android:title="@string/navAjustes"
            android:icon="@android:drawable/ic_menu_preferences" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/navAbout"
            android:icon="@android:drawable/ic_dialog_info" />
    </group>
</menu>